--- a/style.css
+++ b/style.css
@@ -59,9 +59,8 @@ body {
 .mySlides img {
   width: 100%;
   height: 700px;
-  display: block;
   margin: 0 auto;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .dot {
