--- a/styleActualites.css
+++ b/styleActualites.css
@@ -142,6 +142,49 @@ h1 {
   background-color: #2563eb;
   color: white;
 }
+.news-image {
+  width: 100%;
+  border-radius: 8px;
+  cursor: zoom-in;
+  margin: 10px 0;
+}
+
+/* Lightbox */
+#lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.85);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+#lightbox img {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 10px;
+}
+.news-link {
+  display: inline-block;
+  align-self: flex-end;
+  margin-top: 10px;
+  padding: 8px 14px;
+  background: #003366;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.news-link:hover {
+  background: #01509d;
+  transform: translateY(-2px);
+}
+
+
 @media (max-width: 768px) {
   .content {
     margin: 20px;
