--- a/styleActualites.css
+++ b/styleActualites.css
@@ -38,7 +38,7 @@ h1 {
 
 .news-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   gap: 20px;
   padding: 40px 20px;
   margin: auto;
@@ -144,6 +144,7 @@ h1 {
 }
 .news-image {
   width: 100%;
+  height: 300px;
   border-radius: 8px;
   cursor: zoom-in;
   margin: 10px 0;
@@ -170,7 +171,7 @@ h1 {
 }
 .news-link {
   display: inline-block;
-  align-self: flex-end;
+  align-self:flex-end;
   margin-top: 10px;
   padding: 8px 14px;
   background: #003366;
